# Community_RAG

./: .gitignore  cleanup_large_files.sh  large_files.txt
Street_App/: package-lock.json  package.json
Street_App/frontend/: components.json  dummy-utils.js  empty-module-plugin.js  fix-auth-paths.js  (+8 more)
Street_App/my-program/: Anchor.toml  Cargo.toml  README.md
Street_App/my-program/clients/js/: README.md  package.json
Street_App/my-program/clients/js/test/: increment.test.ts
Street_App/my-program/clients/rust/: Cargo.toml  README.md
Street_App/my-program/clients/rust/src/: lib.rs
Street_App/my-program/clients/rust/tests/: create.rs
Street_App/my-program/program/: Cargo.toml  README.md  new-keypair.json
Street_App/my-program/program/src/: lib.rs
Street_App/my-program/scripts/: generate-clients.mjs
Street_App/programs/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
Street_App/programs/street-economics-nft/src/: lib.rs
Street_App/programs/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-10300-7sfYxAJLzYH4ZBazW5wxxXK1tB1wYuenYtJYkKjX3S7k.tar.zst  snapshot-10400-EsEGxAKQ1ynKSvS7PUJjAsVg4mkjiigwyWUPiyRZGWxK.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
Street_App/programs/test-ledger/accounts/run/: 0.2  10200.106  8927.92  9610.100  9763.102
Street_App/programs/test-ledger/accounts/snapshot/10400/: 10300.107  10400.108  39.1
Street_App/programs/test-ledger/snapshot/10400/: 10400  full_snapshot_slot  status_cache
Street_App/programs/test-ledger/snapshot/10400/accounts_hardlinks/: account_path_0
Street_App/programs/tests/: street-economics-nft.ts
pdf_llm/: Dockerfile  README.md  api.py  app.py  deploy.sh  deploy_ec2_prod.sh  deploy_lambda.sh  docker-compose.prod.yml  docker-compose.yml  ec2_setup.sh  lambda_handler.py  nginx.conf  requirements-lambda.txt  requirements.txt  run_api.sh  test.txt  validate_deployment.sh
(+97 files in other folders)
