[package]
name = "street-economics-nft"
version = "0.1.0"
description = "Street Economics NFT Program"
edition = "2021"

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = { version = "1.8.0", features = ["no-entrypoint"] }
solana-program = "1.18.1"

[features]
sbf = []
default = ["sbf"]

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1

[profile.dev]
overflow-checks = true

[workspace]
members = ["programs/street-economics-nft"]
resolver = "2"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 